--- a/style.css
+++ b/style.css
@@ -165,15 +165,26 @@ h4,
 .main {
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  height: 90%;
 }
 
 .graph {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.top-title {
   width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: black;
 }
 
 /* .btn-group {
